assets/stylesheets/application.scss
$govuk-assets-path: '~govuk-frontend/govuk/assets/';

@import 'govuk/all';
@import './admin.scss';

$small-screen: 768px;

.rpr-sidebar {
  border-top: 2px solid #1d70b8;
  padding-top: 10px;
}

.rpr-details {
  &__section-title {
    text-transform: uppercase;
  }

  &__section-title {
    text-transform: uppercase;
  }

  &__sub-group {
    padding: 1em 0 0 0;
    margin: 0;
  }

  &__sub-group-title {
    border-left: 0.5em solid govuk-colour('black');
    padding-left: 0.5em;
  }
}

.rpr-listing {
  &__filters-container {
    background-color: govuk-colour('light-grey');
    padding: 1rem;
  }

  &__filter {
    background-color: govuk-colour('white');
    height: 180px;
    overflow-y: auto;
  }

  &__search-criteria-container {
    margin-bottom: 5px;
  }

  &__profession-title:link,
  &__ra-title:link {
    text-decoration: none;
  }

  &__profession-title:hover,
  &__ra-title:hover {
    text-decoration: underline;
  }

  &__profession-summary-list dt,
  &__profession-summary-list dd,
  &__ra-summary-list dt,
  &__ra-summary-list dd {
    padding: 2px 0;
  }
}

.rpr-internal {
  &__page {
    .govuk-header__container {
      border-bottom: 10px solid govuk-colour('yellow');
    }
  }

  &__listing {
    .govuk-width-container {
      max-width: 1200px;
    }
  }

  &__table-container {
    overflow-x: scroll;
  }

  &-listing {
    &__manage-professions-container {
      margin: 0;
    }

    &__manage-professions-container-left {
      float: left;
      @media screen and (max-width: $small-screen) {
        float: none;
      }
    }

    &__manage-professions-container-right {
      float: right;
      @media screen and (max-width: $small-screen) {
        float: none;
      }
    }

    &__filters-container {
      background-color: govuk-colour('light-grey');
      padding: 1rem;
      clear: both;

      .govuk-details__text {
        border: 0;
      }

      .govuk-details {
        margin-bottom: 0;
      }
    }

    &__filter {
      background-color: govuk-colour('white');
      height: 180px;
      overflow-y: auto;
    }

    &__filter-button {
      margin-bottom: 10px;
      background-color: govuk-colour('black');
      color: govuk-colour('white');
    }

    &__fitlers-details-summary {
      display: block;
    }
  }

  &__details-page {
    &-sidebar {
      border-top: 2px solid govuk-colour('blue');
      padding-top: govuk-spacing(2);

      .govuk-list > li {
        margin-bottom: govuk-spacing(2);
      }

      .govuk-button {
        margin-bottom: 0;
      }
    }
  }
}

@media print {
  .rpr-details__page {
    .govuk-back-link,
    .govuk-phase-banner,
    .govuk-button {
      display: none;
    }
  }
}

